feat: add swagger annotations for certificate domain
